2010-01-22  Pablo de la Concepción <pablo.concepcion@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v3.0_to_v3.1.sql, 
	pandoradb_data.sql: Modified the GIS related tables, to make a better
	GIS Data model, also included the activate_gis config parameter on tconfig.
	Added column timezone_offset to table tserver_export so the export server
	can send timezone information

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>
	* include/config_process.php: use the flag "$develop_bypass" to change the
	method to show the php messages for developing purposes. 

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>
	* godmode/setup/setup.php: fix bug that overwrite the row of "Attachment
	store" field when put the row of field "IP list with API access".

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fix mistake with dates, sorry.

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/menu.css, godmode/gis_maps, godmode/menu.php,
	godmode/gis_maps/configure_gis_map.php, godmode/gis_maps/index.php: add the
	page to manipulate the GIS maps and add the page to create (and edit not at
	the moment) the GIS maps.
	* operation/gis_maps/render_view.php: small changes in the develop of
	render, add events and popups.
	* include/functions_gis.php: add code for respond to events, add function
	"saveMap" to save a map.

2010-01-21 Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/OpenLayers/*: commit lost files of OpenLayer library.

2010-01-20  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/file_manager.php: Added support for file and empty
	  directory deletion.

2010-01-20  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Fixed paths for Fusion Charts.

2010-01-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php, operation/gis_maps/ajax.php: code for GIS maps,
	now show correctly the path points and start to show the popup for this
	points.